--- a/themes/TheIbericosTheme/css/app.css
+++ b/themes/TheIbericosTheme/css/app.css
@@ -5,6 +5,20 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+#cart_block {
+    background-color: #fff;
+    border-bottom: 1px solid #8A746A;
+    border-left: 1px solid #8A746A;
+    border-right: 1px solid #8A746A;
+    display: none;
+    font-size: 0.75em;
+    font-weight: normal !important;
+    height: auto;
+    position: absolute;
+    top: 130px;
+    z-index: 100;
+}
+
 html,
 body {
   font-size: 100%; }
@@ -3236,7 +3250,7 @@ kbd {
       display: block; }
 
 /* Pagination */
-/*.pagination {
+.pagination {
   display: block;
   height: 1.5em;
   margin-left: -0.3125em; }
@@ -3272,7 +3286,7 @@ kbd {
   .pagination-centered ul > li {
     float: none;
     display: inline-block; }
-*/
+
 /* Panels */
 .panel {
   border-style: solid;
@@ -3817,3 +3831,144 @@ table {
     max-width: 500px; }
   .f-dropdown.large {
     max-width: 800px; }
+	
+/********** INNOVANITY **********/
+body {
+  	background-color: #FFDFBF;
+  	font-family: 'Abel', sans-serif !important;
+}
+
+.web-container {
+	background-color: #DADBD7;
+}
+
+.web-sidebar {
+	background: #CFF;
+}
+
+header.web-main-header {
+	background: #FFFFD5;
+}
+aside.web-aside {
+	background: #AFA;		
+}
+.web-modulo {
+	background: #fff;
+}
+.web-main {
+	background: #CCF;	
+}
+.web-main .htop{
+	background: #C9C;	
+}
+.web-main .hright{
+	background: #6CC;
+}
+
+.web-main-content {	
+	background: #FFF;
+}
+
+.web-footer1  {
+	background: #eaeaea;
+}
+.web-footer1 .footer {
+	background: #A0A0A4;
+}
+
+.web-pie {	
+}
+
+.web-pie p {
+	padding-top:10px;
+	font-size:0.8em;
+}
+
+
+/*********************************/
+/* The Grid ---------------------- */
+.lt-ie9 .row { width: 940px; max-width: 100%; min-width: 768px; margin: 0 auto; }
+.lt-ie9 .row .row { width: auto; max-width: none; min-width: 0; margin: 0 -15px; }
+.lt-ie9 .row.large-collapse .column,
+.lt-ie9 .row.large-collapse .columns { padding: 0; }
+.lt-ie9 .row .row { width: auto; max-width: none; min-width: 0; margin: 0 -15px; }
+.lt-ie9 .row .row.large-collapse { margin: 0; }
+ 
+.lt-ie9 .column, .columns { float: left; min-height: 1px; padding: 0 15px; position: relative; }
+.lt-ie9 .column.large-centered, .columns.large-centered { float: none; margin: 0 auto; }
+ 
+.lt-ie9 [class*="column"] + [class*="column"]:last-child { float: right; }
+.lt-ie9 [class*="column"] + [class*="column"].end { float: left; }
+ 
+.lt-ie9 .large-1,
+.lt-ie9 .row .large-1 { width: 8.33333%; }
+ 
+.lt-ie9 .large-2,
+.lt-ie9 .row .large-2 { width: 16.66667%; }
+ 
+.lt-ie9 .large-3,
+.lt-ie9 .row .large-3 { width: 25%; }
+ 
+.lt-ie9 .large-4,
+.lt-ie9 .row .large-4 { width: 33.33333%; }
+ 
+.lt-ie9 .large-5,
+.lt-ie9 .row .large-5 { width: 41.66667%; }
+ 
+.lt-ie9 .large-6,
+.lt-ie9 .row .large-6 { width: 50%; }
+ 
+.lt-ie9 .large-7,
+.lt-ie9 .row .large-7 { width: 58.33333%; }
+ 
+.lt-ie9 .large-8,
+.lt-ie9 .row .large-8 { width: 66.66667%; }
+ 
+.lt-ie9 .large-9,
+.lt-ie9 .row .large-9 { width: 75%; }
+ 
+.lt-ie9 .large-10,
+.lt-ie9 .row .large-10 { width: 83.33333%; }
+ 
+.lt-ie9 .large-11,
+.lt-ie9 .row .large-11 { width: 91.66667%; }
+ 
+.lt-ie9 .large-12,
+.lt-ie9 .row .large-12 { width: 100%; }
+ 
+.lt-ie9 .row .large-offset-1 { margin-left: 8.33333%; }
+.lt-ie9 .row .large-offset-2 { margin-left: 16.66667%; }
+.lt-ie9 .row .large-offset-3 { margin-left: 25%; }
+.lt-ie9 .row .large-offset-4 { margin-left: 33.33333%; }
+.lt-ie9 .row .large-offset-5 { margin-left: 41.66667%; }
+.lt-ie9 .row .large-offset-6 { margin-left: 50%; }
+.lt-ie9 .row .large-offset-7 { margin-left: 58.33333%; }
+.lt-ie9 .row .large-offset-8 { margin-left: 66.66667%; }
+.lt-ie9 .row .large-offset-9 { margin-left: 75%; }
+.lt-ie9 .row .large-offset-10 { margin-left: 83.33333%; }
+ 
+.lt-ie9 .pull-2 { right: 16.66667%; }
+.lt-ie9 .pull-3 { right: 25%; }
+.lt-ie9 .pull-4 { right: 33.33333%; }
+.lt-ie9 .pull-5 { right: 41.66667%; }
+.lt-ie9 .pull-6 { right: 50%; }
+.lt-ie9 .pull-7 { right: 58.33333%; }
+.lt-ie9 .pull-8 { right: 66.66667%; }
+.lt-ie9 .pull-9 { right: 75%; }
+.lt-ie9 .pull-10 { right: 83.33333%; }
+ 
+.lt-ie9 .push-2 { left: 16.66667%; }
+.lt-ie9 .push-3 { left: 25%; }
+.lt-ie9 .push-4 { left: 33.33333%; }
+.lt-ie9 .push-5 { left: 41.66667%; }
+.lt-ie9 .push-6 { left: 50%; }
+.lt-ie9 .push-7 { left: 58.33333%; }
+.lt-ie9 .push-8 { left: 66.66667%; }
+.lt-ie9 .push-9 { left: 75%; }
+.lt-ie9 .push-10 { left: 83.33333%; }
+ 
+/* Nicolas Gallagher's micro clearfix */
+.lt-ie9 .row { *zoom: 1; }
+.lt-ie9 .row:before, .row:after { content: " "; display: table; }
+.lt-ie9 .row:after { clear: both; }
+
